--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Excercise by implementing pong",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/game.spec.js"
   },
   "author": "@EggDice <tamas.kokeny.87@gmail.com>",
   "license": "MIT",
